--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
             android:name=".MainActivity"
             android:exported="false" />
         <activity
+            android:name=".Perfil"
+            android:exported="false" />
+        <activity
             android:name=".LogIn"
             android:exported="true">
             <intent-filter>
